# iot_client

./: .gitignore  Cargo.toml  README.md  justfile  pubspec.yaml  rustfmt.toml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
assets/: appainter_theme.json
ios/Runner/: Info.plist  bridge_generated.h
lib/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  constants.dart  device.dart  main.dart  my_app.dart
lib/futs/: ble.dart  hal.dart
lib/hal/: hal.dart  serialport.dart
lib/mixins/: auto_timer.dart  safe_state.dart
lib/model/: chinfo.dart  device.dart  logic.dart  port.dart  rs485.dart
lib/provider/: app_provider.dart  ble_provider.dart
lib/scenes/: covi.dart  cross_hole.dart  door.dart  fan.dart  lane_indicator.dart  lane_indicator_port.dart  light.dart  light_inside.dart  light_outside.dart  traffic_light.dart  water_pump.dart  wind_speed.dart
lib/scenes/widgets/: fan_comp.dart  lane_indicator_comp.dart  lane_indicator_components.dart  shared_service_info.dart  util.dart
lib/utils/: at_parse.dart  ble_scan.dart  navigation.dart  tool.dart
lib/views/: about.dart  bluetooth.dart  home.dart  in_app_browser.dart  logic_control_setting.dart  recoder.dart  rs485_setting.dart  setting.dart
lib/views/components/: banner.dart  (+2 more)
linux/: CMakeLists.txt  my_application.cc
macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements  bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
native/: Cargo.toml
native/native.xcodeproj/: project.pbxproj
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs  log.rs
native/src/ble/: at_command.rs  crc16.rs  hex.rs  mod.rs  serial.rs
native/src/hal/: eui48.rs  indexed.rs  memory.rs  mod.rs  utils.rs
native/src/hal/device/: device_display.rs  device_setting.rs  mod.rs
native/src/hal/serial/: baud_rate.rs  data_bit.rs  ext_bit.rs  mod.rs  parity.rs  port.rs  port_type.rs  protocol.rs  stop_bit.rs  undefine.rs
native/src/mioport/: mod.rs
native/src/serial/: mod.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+5 files in other folders)
