[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
bitflags = "2.2.1"
crc = "3.0"
# flutter_rust_bridge = { version = "1", features = ["worker-single"] }
flutter_rust_bridge = "1"
hex = "0.4"
regex = "1"
rmodbus = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2"
# serialport = { git = "https://github.com/serialport/serialport-rs.git" }
once_cell = "1"