[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
bitflags = "2.2.1"
chrono = { version = "0.4", features = ["unstable-locales"] }
crc = "3.0"
flutter_rust_bridge = { version = "1", features = ["worker-single"] }
hex = "0.4"
lazy_static = "1.4.0"
mio = "0.8"
mio-serial = "5.0.5"
once_cell = "1"
regex = "1"
rmodbus = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = { git = "https://github.com/serialport/serialport-rs.git", branch = "main" }