[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
bitflags = "2.2"
chrono = { workspace = true, features = ["unstable-locales"] }
crc = "3.0"
flutter_rust_bridge = { version = "1", default-features = false, features = ["worker-single", "chrono", "uuid"] }
hex = "0.4"
lazy_static = "1"
once_cell = "1"
regex = "1"
rmodbus = { version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = { git = "https://github.com/serialport/serialport-rs.git", branch = "main" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }